--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Agar.sg</title>
+<title>Agar.Bas</title>
   <script language="javascript" type="text/javascript" src="processing.js"></script>
 </head>
 <body>
 
-<h1>Welcome to Agar.sg</h1>
-<p>Game inspired by Agar.io
-</p>
+
   <canvas data-processing-sources="sketch.pde"></canvas>
   <!-- this line removes any default padding and style. you might only need one of these values set. -->
   <style> body {padding: 0; margin: 0;} </style>
